syntax = "proto3";

package go_example.api.rbac.v1;
option go_package = "github.com/studio-asd/go-example/proto/api/rbac/v1";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

import "types/rbac/rbac.proto";

message CreateSecurityPermissionRequest {
    string permission_name = 1 [(buf.validate.field).required = true];
    go_example.types.rbac.SecurityPermissionValue permission_type = 2 [(buf.validate.field).required = true];
    string permission_key = 3;
    string permission_value = 4 [(buf.validate.field).required = true];
}

message CreateSecurityPermissionResponse {
    string permission_id = 1;
    string permission_name = 2;
    go_example.types.rbac.SecurityPermissionValue permission_type = 3;
    google.protobuf.Timestamp created_at = 10;
}

message CreateSecurityRoleRequest {
    string role_name = 1 [(buf.validate.field).required = true];
    repeated string permission_ids = 2 [(buf.validate.field).required = true];
}

message CreateSecurityRoleResponse {
    string role_id = 1;
    string role_name = 2;
    google.protobuf.Timestamp created_at = 10;
}
